--- a/Prototype/views/partials/navbar.ejs
+++ b/Prototype/views/partials/navbar.ejs
@@ -13,8 +13,8 @@
 
         <% if (role === 'moderator') { %>
             <li><img src="/images/Spartan.png" alt="spartan" class="spartan-image" width="150"></li>
-            <li><a href="/modHome"><h2>Spartan Aid</h2></a></li>
-            <li><a href="/modMessages"><h2>Messages</h2></a></li>
+            <li><a href="/home"><h2>Spartan Aid</h2></a></li>
+            <li><a href="/message"><h2>Messages</h2></a></li>
             <li><a href="/account/<%= userId %>"><h2>Account</h2></a></li>
             <li><a href="/modUsers"><h2>Users</h2></a></li>
             <li><a href="/modPosts"><h2>Posts</h2></a></li>
