--- a/Prototype/views/partials/navbar.ejs
+++ b/Prototype/views/partials/navbar.ejs
@@ -18,7 +18,7 @@
             <li><a href="/account/<%= userId %>"><h2>Account</h2></a></li>
             <li><a href="/modUsers"><h2>Users</h2></a></li>
             <li><a href="/modPosts"><h2>Posts</h2></a></li>
-            <li><a href="/modTutor"><h2>Tutors</h2></a></li>
+            <li><a href="/modTutors"><h2>Tutors</h2></a></li>
             <li><a href="/logout"><h2>Logout</h2></a></li>
         <% } else if (role === 'student') { %>
             <li><img src="/images/Spartan.png" alt="spartan" class="spartan-image" width="150"></li>
