--- a/Prototype/views/modMessages.ejs
+++ b/Prototype/views/modMessages.ejs
@@ -63,19 +63,19 @@
                 <% }) %>
             <% } %>
         </div>
-    <div class="messageContainer d-flex">
-        <form action="/sendMessage?convId=<%= convId %>" method="POST" class="d-flex flex-grow-1">
-            <input type="text" class="messageBox" name="message" placeholder="Write Message" required>
-            <input type="hidden" name="userId" value="<%= userId %>">
-            <button type="submit" class="sendBtn">Send</button>
-        </form>
-        <form action="/reviewPage" method="POST" class="d-flex">
-            <input type="hidden" name="convId" value="<%= convId %>">
-            <input type="hidden" name="userId2" value="<%= receiver.userId %>"/>
-            <button type="submit" class="sendBtn flex-grow-1">Review</button>
-        </form>
-        
-    </div>
+        <div class="messageContainer">
+            <form action="/sendMessage?convId=<%= convId %>" method="POST" class="messageSection">
+                <input type="text" class="messageBox" name="message" placeholder="Write Message" required>
+                <input type="hidden" name="userId" value="<%= userId %>">
+                <button type="submit" class="sendBtn">Send</button>
+            </form>
+            <button type="button" class="calendarBtn" data-bs-toggle="modal" data-bs-target="#postModal">Calendar</button>
+            <form action="/reviewPage" method="POST">
+                <input type="hidden" name="convId" value="<%= convId %>">
+                <input type="hidden" name="userId2" value="<%= receiver.userId %>"/>
+                <button type="submit" class="reviewBtn">Review</button>
+            </form>
+        </div>
         
     <div class="formContainer">
         <div class="modal fade" id="postModal" tabindex="-1" aria-labelledby="postModalLabel" aria-hidden="true">
