--- a/Prototype/views/account.ejs
+++ b/Prototype/views/account.ejs
@@ -69,7 +69,7 @@
                                 <button type="button" class="btn btn-link p-0 border-0 me-2">
                                     <img src="/images/comment.png" alt="Comment" width="30" height="30">
                                 </button>
-                                <div class="text-muted small">0 comments</div>
+                                <div class="text-muted small"><%= post.commentCount %> comments</div>
                             </div>
                                 <div class="d-flex align-items-center me-4">
                                     
