--- a/Prototype/views/message.ejs
+++ b/Prototype/views/message.ejs
@@ -8,6 +8,7 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
             rel="stylesheet">
         <link rel="stylesheet" href="/public/message.css">
+        <link rel="stylesheet" href="/public/home.css">
         <script src="/public/script.js" defer></script>
         <title>Messages</title>
     </head>
