--- a/Prototype/views/feed.ejs
+++ b/Prototype/views/feed.ejs
@@ -19,7 +19,9 @@
     <div class="columns">
         <div id="feed">
             <div id="feed-header">
-                <h1><%= category.catName %> Feed</h1>
+                <h1>
+                    <%= category.catName %> Feed
+                </h1>
             </div>
             <div class="nav-buttons">
                 <button id="viewPostsButton" class="btn btn-secondary" onclick="toggleView('posts')">View Posts</button>
@@ -32,12 +34,13 @@
                             Add Resource
                         </button>
                     </div>
-                <% } %>
-                <div>
-                    <button type="button" id="postButton" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#postModal">
-                        Post
-                    </button>
-                </div>
+                    <% } %>
+                        <div>
+                            <button type="button" id="postButton" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#postModal">
+                                Post
+                            </button>
+                        </div>
             </div>
             <div id="feed-content">
                 <% if (!posts || posts.length===0) { %>
@@ -52,12 +55,12 @@
                                             <%= post.title %>
                                         </h2>
                                         <h4>By: <a href="/account/<%= post.userId %>">
-                                            <img src="/images/<%= post.profilePic %>" class="rounded-circle" alt="profile"
-                                                height="40">
-                                            <span>
-                                                <%= post.fname + " " + post.lname %>
-                                            </span>
-                                        </a>
+                                                <img src="/images/<%= post.profilePic %>" class="rounded-circle"
+                                                    alt="profile" height="40">
+                                                <span>
+                                                    <%= post.fname + " " + post.lname %>
+                                                </span>
+                                            </a>
                                         </h4>
 
                                         <div class="delete-button">
@@ -68,6 +71,14 @@
                                                     <button type="submit" class="btn btn-danger">Delete</button>
                                                 </form>
                                                 <% } %>
+                                                    <% if (userId===post.userId ) { %>
+                                                        <button type="button" class="btn btn-primary p-2 me-2"
+                                                            data-bs-toggle="modal" data-bs-target="#editModal" onclick="setEditModalValues('<%= post.postId %>', '<%= post.title %>', 
+                                        '<%= post.courseId %>', '<%= post.description %>')">
+                                                            Edit
+                                                        </button>
+
+                                                        <% } %>
                                         </div>
                                     </div>
                                     <div class="card-body">
@@ -77,9 +88,6 @@
 
                                         <div class="d-flex justify-content-end align-items-center me-4">
                                             <div class="d-flex align-items-center me-4">
-                                                <!-- <button type="button" class="btn btn-link p-0 border-0 me-2"
-                                                    data-bs-toggle="modal" data-bs-target="#replyModal"
-                                                    onclick="setReplyModalValues('<%= post.postId %>')">Reply</button> -->
                                                 <% if (userId !==post.userId) { %>
                                                     <form action="/createConv" method="POST" class="ms-4">
                                                         <input type="hidden" id="userId2" value="<%= post.userId %>"
@@ -89,12 +97,14 @@
                                                     </form>
                                                     <% } %>
                                                         <button type="button" class="btn btn-link p-0 border-0 me-2"
-                                                        data-bs-toggle="modal" data-bs-target="#replyModal"
-                                                        onclick="setReplyModalValues('<%= post.postId %>')">
+                                                            data-bs-toggle="modal" data-bs-target="#replyModal"
+                                                            onclick="setReplyModalValues('<%= post.postId %>')">
                                                             <img src="/images/comment.png" alt="Comment" width="30"
                                                                 height="30">
                                                         </button>
-                                                        <div class="text-muted small"><%= post.commentCount %> comments</div>
+                                                        <div class="text-muted small">
+                                                            <%= post.commentCount %> comments
+                                                        </div>
                                             </div>
                                             <div class="d-flex align-items-center me-4">
                                                 <button type="submit" id="likeButton"
@@ -116,13 +126,16 @@
                                             </div>
                                             <div class="d-flex align-items-center">
                                                 <% if (post.flagged) { %>
-                                                        <img src="/images/markedFlag.png" alt="Flag" width="40" height="40">
-                                                <% } else { %>
-                                                        <button type="button" id="flagButton" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#flagModal" onclick="setFlagModalValues('<%= post.postId %>')">
-                                                            <img src="/images/emptyFlag.png" alt="Flag" width="40" height="40">
+                                                    <img src="/images/markedFlag.png" alt="Flag" width="40" height="40">
+                                                    <% } else { %>
+                                                        <button type="button" id="flagButton" class="btn btn-link"
+                                                            data-bs-toggle="modal" data-bs-target="#flagModal"
+                                                            onclick="setFlagModalValues('<%= post.postId %>')">
+                                                            <img src="/images/emptyFlag.png" alt="Flag" width="40"
+                                                                height="40">
                                                         </button>
-                                                <% } %>
-                                                <!-- <button type="button" id="flagButton"
+                                                        <% } %>
+                                                            <!-- <button type="button" id="flagButton"
                                                     class="btn btn-link p-0 border-0 me-2" onclick="toggleFlag(event)">
                                                     <img src="/images/emptyFlag.png" alt="Flag" width="40" height="40">
                                                 </button> -->
@@ -130,7 +143,8 @@
                                         </div>
                                         <div class="replies">
                                             <% if (!post.replies || post.replies.length===0) { %>
-                                                <p>No replies found, be the first to make one!</p>
+                                                <p>No replies found, be the first to make
+                                                    one!</p>
                                                 <% } else { %>
                                                     <% post.replies.forEach(reply=> { %>
                                                         <div class="reply card mb-2">
@@ -167,11 +181,13 @@
                             <% }) %>
                                 <% } %>
             </div>
+
+            <!-- Resource feed -->
             <div id="resources-content" style="display: none;">
                 <h2>Resources</h2>
                 <% if (!resources || resources.length===0) { %>
                     <h2>No resources found, be the first to make one!</h2>
-                <% } else { %>
+                    <% } else { %>
                         <% resources.forEach(resource=> { %>
                             <div class="resource">
                                 <div class="card">
@@ -198,16 +214,17 @@
                                                 <input type="hidden" name="fileName" value="<%= resource.fileName %>">
                                                 <button type="submit" class="btn btn-danger">Delete</button>
                                             </form>
-                                        <% } %>
+                                            <% } %>
                                     </div>
                                 </div>
                             </div>
                             <br>
-                        <% }) %>
-                <% } %>
+                            <% }) %>
+                                <% } %>
             </div>
         </div>
 
+        <!-- Message bar -->
         <div id="private-messages">
             <h1>Private Messages</h1>
             <% if (convUsers) { %>
@@ -236,11 +253,13 @@
         </div>
     </div>
 
+    <!-- Resource modal -->
     <div class="modal fade" id="resourceModal" tabindex="-1" aria-labelledby="resourceModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="postModalLabel">Add a resource</h5>
+                    <h5 class="modal-title" id="postModalLabel">Add a
+                        resource</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <form action="/upload" method="POST" enctype="multipart/form-data">
@@ -255,7 +274,8 @@
                             <textarea class="form-control" id="url" name="url" rows="1"></textarea>
                         </div>
                         <div class="mb-3">
-                            <label for="fileUpload" class="form-label">File upload?</label>
+                            <label for="fileUpload" class="form-label">File
+                                upload?</label>
                             <input type="file" class="form-control" id="fileUpload" name="file">
                         </div>
                     </div>
@@ -268,11 +288,13 @@
         </div>
     </div>
 
+    <!-- Post modal -->
     <div class="modal fade" id="postModal" tabindex="-1" aria-labelledby="postModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="postModalLabel">Create a Post</h5>
+                    <h5 class="modal-title" id="postModalLabel">Create a
+                        Post</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <form action="/post" method="POST">
@@ -283,7 +305,8 @@
                             <input type="text" class="form-control" id="title" name="title" required>
                         </div>
                         <div class="mb-3">
-                            <label for="courseId" class="form-label">Course ID</label>
+                            <label for="courseId" class="form-label">Course
+                                ID</label>
                             <input type="number" class="form-control" id="courseId" name="courseId" min="100" max="999"
                                 required>
                         </div>
@@ -302,7 +325,47 @@
         </div>
     </div>
 
+    <!-- Edit modal -->
+    <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editModalLabel">Edit
+                        Post</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form action="/editPost" method="POST">
+                    <input type="hidden" id="catId" value="<%= catId %>" name="catId">
+                    <input type="hidden" id="postId" name="postId">
 
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <label for="editTitle" class="form-label">Title</label>
+                            <input type="text" class="form-control" id="editTitle" name="editTitle" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editCourseId" class="form-label">Course
+                                ID</label>
+                            <input type="number" class="form-control" id="editCourseId" name="editCourseId" min="100" max="999"
+                                required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editDescription" class="form-label">Description</label>
+                            <textarea class="form-control" id="editDescription" name="editDescription" rows="4"
+                                required></textarea>
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Reply modal -->
     <div class="modal fade" id="replyModal" tabindex="-1" aria-labelledby="replyModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -329,12 +392,13 @@
         </div>
     </div>
 
-    
+    <!-- Flag modal -->
     <div class="modal fade" id="flagModal" tabindex="-1" aria-labelledby="flagModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="flagModalLabel">Confirm Flagging</h5>
+                    <h5 class="modal-title" id="flagModalLabel">Confirm
+                        Flagging</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -352,7 +416,6 @@
         </div>
     </div>
 
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 
@@ -360,7 +423,14 @@
         function setReplyModalValues(postId) {
             document.getElementById('postId').value = postId;
         }
-        
+
+        function setEditModalValues(postId, title, courseId, description) {
+            document.getElementById('postId').value = postId;
+            document.getElementById('editTitle').value = title;
+            document.getElementById('editCourseId').value = courseId;
+            document.getElementById('editDescription').value = description;
+        }
+
         function setFlagModalValues(postId) {
             document.getElementById('flagPostId').value = postId;
         }
