fixed resource links

--- a/Prototype/views/feed.ejs
+++ b/Prototype/views/feed.ejs
@@ -302,7 +302,7 @@
                 class="card-body d-flex justify-content-between align-items-center"
               >
                 <div class="flex-grow-1 text-center">
-                  <a href="<%= resource.url %>" class="btn btn-link">
+                  <a href="https://<%= resource.url %>" class="btn btn-link">
                     <%= resource.url %>
                   </a>
                 </div>
