--- a/Prototype/views/teacherResources.ejs
+++ b/Prototype/views/teacherResources.ejs
@@ -29,7 +29,7 @@
 
                                 <div class="card-body d-flex justify-content-between align-items-center">
                                     <div class="flex-grow-1 text-center">
-                                        <a href="<%= resource.url %>" class="btn btn-link"><%= resource.url %></a>
+                                        <a href="https://<%= resource.url %>" class="btn btn-link"><%= resource.url %></a>
                                     </div>
                                     <form action="/download/<%= resource.fileName %>" method="get" class="d-inline">
                                         <input type="hidden" name="fileName" value="<%= resource.fileName %>">
