added styling to login and signup pages

--- a/Prototype/views/login.ejs
+++ b/Prototype/views/login.ejs
@@ -12,7 +12,7 @@
 <body >
     <!-- Page Filler -->
     <div class=" split filler">
-
+      <video src="https://static.uncg.edu/web-assets/homepage-assets/sept_oct_2024_web_topper.mp4" autoplay muted loop></video>
     </div>
 
     <!-- Login Form -->
