--- a/Prototype/views/signup.ejs
+++ b/Prototype/views/signup.ejs
@@ -17,15 +17,18 @@
 <body>
     <!-- Page Filler -->
     <div class=" split filler-signup">
-
+        <video src="https://static.uncg.edu/web-assets/homepage-assets/sept_oct_2024_web_topper.mp4" autoplay muted loop></video>
     </div>
 
     <!-- signup Form -->
     <div class="split signup-info">
 
         <div class="login-content">
-            <div><button class="btn btn-secondary" onclick="window.location.href='/'">Back</button></div>
-            <h1 class="login-title">Sign Up</h1>
+            <div class="titleBtn">
+                <h1 class="login-title">Sign Up</h1>
+                <button class="backBtn" onclick="window.location.href='/'">Back</button>
+            </div>
+
                 <img class="spartan" src="../images/Spartan.png" alt="Spartan">
                 <p style="font-weight: bold;">Enter sign up information below:</p>
 
