--- a/Prototype/public/style.css
+++ b/Prototype/public/style.css
@@ -2,7 +2,22 @@
 
 .filler {
     right: 0;
-    background-color: purple;
+    background-color: #0f2044;
+    position: fixed;
+    width: 50%;
+    height: 100%;
+    top: 0;
+    overflow: hidden;
+}
+
+.filler video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1; 
 }
 
 .split {
@@ -17,7 +32,7 @@
 
 .login{
     left: 0;
-    background-color: white;
+    background-color: #0f2044;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,6 +40,7 @@
 
 .login-title {
     margin-bottom: 64px;
+    font-weight: bolder;
 }
 
 .email{
@@ -48,6 +64,9 @@
     width: 500px;
     padding-left: 80px;
     padding-right: 80px;
+    background-color: white;
+    border-radius: 20px;
+    padding-top: 16px;
 }
 
 .login-button {
@@ -89,15 +108,44 @@
 /* Sign up */
 .signup-info{
     right: 0;
-    background-color: white;
+    background-color: #0f2044;
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .filler-signup {
     left: 0;
-    background-color: purple;
+    background-color: #0f2044;
+    position: fixed;
+    width: 50%;
+    height: 100%;
+    top: 0;
+    overflow: hidden;
+}
+
+.filler-signup video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1; 
+}
+
+.titleBtn {
+    display: flex;
+    justify-content: space-between;
+}
+
+.backBtn {
+    background-color: grey;
+    border-radius: 20px;
+    border-color: grey;
+    color: white;
+    height: 40px;
 }
 
 /*    forgot page      */
