--- a/Prototype/views/signup.ejs
+++ b/Prototype/views/signup.ejs
@@ -58,9 +58,18 @@
                         <!-- Role -->
                         <div class="role">
                             <label for="role">Role</label><br>
-                            <select id="role" name="role" required>
+                            <select id="role" name="role" required onchange="showSubjects()">
                                 <option value="student">student</option>
                                 <option value="teacher">teacher</option>
+                            </select><br><br>
+                        </div>
+                        <!-- Subject -->
+                        <div class="subject" id="subjectDiv" style="display:none;">
+                            <label for="subject">Select Subject</label><br>
+                            <select id="subject" name="subject">
+                                <% subjects.forEach(subject=> { %>
+                                    <option value="<%= subject.catName %>"><%= subject.catName %></option>
+                                <% }); %>
                             </select><br><br>
                         </div>
                         <button class="login-button" type="submit">Sign up</button>
@@ -75,8 +84,22 @@
                             alert('Email must end with @uncg.edu');
                             return false;
                         }
+                        const role = document.getElementById('role').value;
+                        if(role === 'teacher'){
+
+                        }
                         return true;
                     }
+
+                    function showSubjects(){
+                        const role = document.getElementById('role').value;
+                        if(role === 'teacher'){
+                            subjectDiv.style.display = 'block';
+                        }else {
+                            subjectDiv.style.display = 'none';
+                        }
+                    }
+
                 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
